--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@markdoc/next.js": "^0.1.6",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
