--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.4.3"
   },
   "devDependencies": {
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0"
   }
 }
