--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,14 @@
 {
   "tabWidth": 2,
   "useTabs": false,
-  "singleQuote": true
+  "singleQuote": true,
+  "plugins": ["prettier-plugin-astro"],
+  "overrides": [
+    {
+        "files": "*.astro",
+        "options": {
+        "parser": "astro"
+      }
+    }
+  ]
 }
